<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_layout_padding"
    android:background="@color/btn_sing_in_first_1">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/candies_login_image"
        android:contentDescription="@string/logo_imView_cont_desc"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        app:boxCornerRadiusTopEnd="@dimen/corners_radius_20dp"
        app:boxCornerRadiusTopStart="@dimen/corners_radius_20dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_person_2_24"
        app:boxStrokeWidth="@dimen/boxStrokeWidth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/input_text_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:boxCornerRadiusBottomEnd="@dimen/corners_radius_20dp"
        app:boxCornerRadiusBottomStart="@dimen/corners_radius_20dp"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        app:boxStrokeWidth="@dimen/boxStrokeWidth"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/hint_textview_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/baseline_lock_person_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/input_text_size_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hint_textview_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15dp"
        android:clickable="true"
        android:fontFamily="@font/itim"
        android:text="@string/forgot_pass_TV"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sing_in_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sing_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40dp"
        android:background="@drawable/btn_sing_in_background"
        android:fontFamily="@font/itim"
        android:text="@string/sing_in_btn_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_36sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/hint_textview_guest_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hint_textview_guest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/itim"
        android:text="@string/don_t_have_an_account"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cont_as_guest_click_TV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cont_as_guest_click_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:clickable="true"
        android:fontFamily="@font/itim"
        android:text="@string/btn_continue_as_guest"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>